// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract expressions GetContract 1`] = `
"
        (
            template_id (static_id 0 (\\"contract.test.ts\\" 34))
            storage ()
            storage_type ((unknown 0))
            messages ((entry_point_1 True False False True (\\"contract.test.ts\\" 35) ((set_type (params (\\"contract.test.ts\\" 35)) \\"unit\\" (\\"contract.test.ts\\" 44)) (defineLocal \\"contract\\" (openVariant (contract entry_point_1 \\"unit\\" (literal (address KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT) (\\"contract.test.ts\\" 35)) (\\"contract.test.ts\\" 35)) \\"Some\\" None (\\"contract.test.ts\\" 35)) True (\\"contract.test.ts\\" 35)) (set (operations (\\"contract.test.ts\\" 35)) (cons (transfer (unit) (literal (mutez 100) (\\"contract.test.ts\\" 35)) (getLocal \\"contract\\" (\\"contract.test.ts\\" 35)) (\\"contract.test.ts\\" 35)) (operations (\\"contract.test.ts\\" 35)) (\\"contract.test.ts\\" 35)) (\\"contract.test.ts\\" 35)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"contract.test.ts\\" 34))
        )
        "
`;

exports[`Contract expressions GetContract 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %entry_point_1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    # == entry_point_1 ==\\\\n    # contract = sp.local(\\\\\\"contract\\\\\\", sp.contract(sp.TUnit, sp.address('KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT'), entry_point='entry_point_1').open_some()) # @storage\\\\n    PUSH address \\\\\\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\\\\\"; # address : @storage\\\\n    CONTRACT %entry_point_1 unit; # option (contract unit) : @storage\\\\n    IF_NONE\\\\n      {\\\\n        PUSH int 35; # int : @storage\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @some : @storage\\\\n    # sp.transfer(sp.unit, sp.mutez(100), contract.value) # @some : @storage\\\\n    NIL operation; # list operation : @some : @storage\\\\n    SWAP;       # @some : list operation : @storage\\\\n    PUSH mutez 100; # mutez : @some : list operation : @storage\\\\n    UNIT;       # unit : mutez : @some : list operation : @storage\\\\n    TRANSFER_TOKENS; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%entry_point_1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"address\\"
                            },
                            {
                                \\"string\\": \\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CONTRACT\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"unit\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%entry_point_1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"int\\"
                                        },
                                        {
                                            \\"int\\": \\"35\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"UNIT\\"
                    },
                    {
                        \\"prim\\": \\"TRANSFER_TOKENS\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Contract expressions ToAddress 1`] = `
"
        (
            template_id (static_id 0 (\\"contract.test.ts\\" 47))
            storage ()
            storage_type (\\"address\\")
            messages ((entry_point_1 True False False True (\\"contract.test.ts\\" 50) ((set_type (params (\\"contract.test.ts\\" 50)) \\"unit\\" (\\"contract.test.ts\\" 55)) (set (data) (to_address (self \\"entry_point_1\\" (\\"contract.test.ts\\" 50)) (\\"contract.test.ts\\" 50)) (\\"contract.test.ts\\" 50)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"contract.test.ts\\" 47))
        )
        "
`;

exports[`Contract expressions ToAddress 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %entry_point_1);\\\\nstorage   address;\\\\ncode\\\\n  {\\\\n    DROP;       # \\\\n    # == entry_point_1 ==\\\\n    # self.data = sp.self_entry_point_address('entry_point_1') # \\\\n    SELF %entry_point_1; # @self\\\\n    ADDRESS;    # address\\\\n    NIL operation; # list operation : address\\\\n    PAIR;       # pair (list operation) address\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"address\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%entry_point_1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"DROP\\"
                    },
                    {
                        \\"prim\\": \\"SELF\\",
                        \\"annots\\": [
                            \\"%entry_point_1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"ADDRESS\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Contract expressions ToContract 1`] = `
"
        (
            template_id (static_id 0 (\\"contract.test.ts\\" 21))
            storage ()
            storage_type ((unknown 0))
            messages ((entry_point_1 True False False True (\\"contract.test.ts\\" 22) ((set_type (params (\\"contract.test.ts\\" 22)) \\"unit\\" (\\"contract.test.ts\\" 31)) (set (operations (\\"contract.test.ts\\" 22)) (cons (transfer (unit) (literal (mutez 100) (\\"contract.test.ts\\" 22)) (openVariant (contract entry_point_1 \\"unit\\" (literal (address KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT) (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)) (operations (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)) (\\"contract.test.ts\\" 22)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"contract.test.ts\\" 21))
        )
        "
`;

exports[`Contract expressions ToContract 2`] = `
"{
    \\"micheline\\": \\"parameter (unit %entry_point_1);\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    # == entry_point_1 ==\\\\n    # sp.transfer(sp.unit, sp.mutez(100), sp.contract(sp.TUnit, sp.address('KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT'), entry_point='entry_point_1').open_some(message = sp.some('CONTRACT_NOT_FOUND'))) # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PUSH address \\\\\\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\\\\\"; # address : list operation : @storage\\\\n    CONTRACT %entry_point_1 unit; # option (contract unit) : list operation : @storage\\\\n    IF_NONE\\\\n      {\\\\n        PUSH (option string) (Some \\\\\\"CONTRACT_NOT_FOUND\\\\\\"); # option string : list operation : @storage\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @some : list operation : @storage\\\\n    PUSH mutez 100; # mutez : @some : list operation : @storage\\\\n    UNIT;       # unit : mutez : @some : list operation : @storage\\\\n    TRANSFER_TOKENS; # operation : list operation : @storage\\\\n    CONS;       # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\",
                    \\"annots\\": [
                        \\"%entry_point_1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"address\\"
                            },
                            {
                                \\"string\\": \\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CONTRACT\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"unit\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%entry_point_1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"option\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"string\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"Some\\",
                                            \\"args\\": [
                                                {
                                                    \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                                }
                                            ]
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"mutez\\"
                            },
                            {
                                \\"int\\": \\"100\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"UNIT\\"
                    },
                    {
                        \\"prim\\": \\"TRANSFER_TOKENS\\"
                    },
                    {
                        \\"prim\\": \\"CONS\\"
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;
